# logme

./: .gitignore  README.md  giti.sh  go.mod  go.sum  makefile
assets/: manifest.json
client/: Cargo.toml  dtinput.css  index.html  main.css
client/src/: app.rs  app2.rs  console.rs  lib.rs  utils.rs
client/src/datetime_input/: format_num.rs  mod.rs  mod2.rs
cmd/logme/: main.go
server/: index.html  kv.go  logs.db  main.go  main.go.old  server.go
static/css/: dtinput.css
static/html/: index.html  index2.html
static/js/: DTInput.js  DTInput2.js  main.js
