[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chrono = "0.4.31"
console_error_panic_hook = "*"
leptos = { version = "0.7.0", features = ["csr", "nightly"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
tracing-wasm = "*"
wasm-bindgen = "^0.2"
web-sys = "0.3.76"
